--- a/index.html
+++ b/index.html
@@ -12,11 +12,24 @@
 </head>
 <body>
 
-    <h1>Welcome To</h1>
-    <h1><span>Peter Parker</span> World</h1>
-    <h3>Build Climber and Train Stopper</h3>
-    <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
-    <img src="images/jhankar.png" alt="">
+   <section class="top-banner">
+             <div class="half-width">
+                <h1>Welcome To</h1>
+                <h1><span>Peter Parker</span> World</h1>
+                <h3>Build Climber and Train Stopper</h3>
+                <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
+                <a class="hire-me" target="_blank" href="https://www.linkedin.com/company/programminghero/">Hire Me</a>
+            </div>
+
+            <div class="half-width">
+                <img src="images/jhankar.png" alt="">
+
+
+            </div>
+
+
+   </section>
+   
 
     
 </body>
